test/e2e/features/session_persistence/testdata/cookie-session-persistence.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-cookie
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-cookie
  namespace: default
spec:
  parentRefs:
  - name: gw-cookie
  hostnames: ["echo.local"]
  rules:
  - backendRefs:
    - name: echo
      port: 8080
    sessionPersistence:
      type: Cookie
      absoluteTimeout: 1h
      cookie:
        name: Session-A
        lifetimeType: Permanent
