test/e2e/features/session_persistence/testdata/header-session-persistence.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-header
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-header
  namespace: default
spec:
  parentRefs:
  - name: gw-header
  hostnames: ["echo.local"]
  rules:
  - backendRefs:
    - name: echo
      port: 8080
    sessionPersistence:
      type: Header
      absoluteTimeout: 100s 
      header:
        name: Session-A
